--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,3 +15,6 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_LANGUAGE: "False"
+          SHOW_OS: "False"
+          SHOW_EDITORS: "False"
+          SHOW_SHORT_INFO: "False"
