--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LANGUAGE: "True"
-          SHOW_OS: "True"
-          SHOW_EDITORS: "True"
-          SHOW_SHORT_INFO: "True"
+          SHOW_LANGUAGE: "False"
+          SHOW_OS: "False"
+          SHOW_EDITORS: "False"
+          SHOW_SHORT_INFO: "False"
