--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -10,11 +10,9 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LANGUAGE: "False"
-          SHOW_OS: "False"
-          SHOW_EDITORS: "False"
-          SHOW_SHORT_INFO: "False"
+          SHOW_TITLE: true
+          
