--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LANGUAGE: true
-          SHOW_OS: true
-          SHOW_PROJECTS: true
-          SHOW_SHORT_INFO: true
+          SHOW_LANGUAGE: True
+          SHOW_OS: True
+          SHOW_PROJECTS: True
+          SHOW_SHORT_INFO: True
