--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -7,14 +7,11 @@ on:
   workflow_dispatch:
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LANGUAGE: True
-          SHOW_OS: True
-          SHOW_PROJECTS: True
-          SHOW_SHORT_INFO: True
+
