--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -2,7 +2,7 @@ name: Waka Readme
 
 on:
   schedule:
-    - cron: '0 */23 * * *'
+    - cron: '0 *23 * * *'
   workflow_dispatch:
 jobs:
   update-readme:
